@@ -1,3 +1,7 @@
+2002-12-05  Jim Wilson  <wilson@redhat.com>
+
+	* gas/ia64/opc-x.d: Regenerate.	
+	
 2002-12-05  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/arm/adrl.s: Pad end of .text.
