@@ -1,3 +1,8 @@
+2002-12-05  Jim Wilson  <wilson@redhat.com>
+
+	* configure.in (OBJDUMP_DEFS): Define SKIP_ZEROES as 16 for IA-64.
+	* configure: Regenerate.
+
 2002-12-04  Ian Lance Taylor  <ian@airs.com>
 
 	* MAINTAINERS: Change e-mail address back to airs.com.
